[gd_scene load_steps=3 format=3 uid="uid://410o25uxyrpl"]

[ext_resource type="Script" uid="uid://dl21l64ihy5xe" path="res://juego/blackjack_multiplayer.gd" id="1_k7m0m"]
[ext_resource type="Texture2D" uid="uid://bat0wtwi7pksx" path="res://assets/fonds/fondomesa.png" id="2_ldim1"]

[node name="BlackjackMultiplayer" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_k7m0m")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1609.0
offset_bottom = 888.0

[node name="user_label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 402.0
offset_right = 164.0
offset_bottom = 438.0
theme_override_font_sizes/font_size = 26
text = "Jugador: ..."

[node name="role_label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 1264.0
offset_top = 24.0
offset_right = 1527.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 26
text = "Rol: Dealer o Jugador"

[node name="player_score" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 1308.0
offset_top = 116.0
offset_right = 1506.0
offset_bottom = 191.0
theme_override_font_sizes/font_size = 26

[node name="player_hand" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 599.0
offset_top = 692.0
offset_right = 983.0
offset_bottom = 847.0

[node name="dealer_score" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 1309.0
offset_top = 229.0
offset_right = 1518.0
offset_bottom = 310.0
theme_override_font_sizes/font_size = 26

[node name="dealer_hand" type="HBoxContainer" parent="Panel"]
layout_mode = 1
offset_left = 878.0
offset_top = 162.0
offset_right = 1118.0
offset_bottom = 232.0
rotation = 3.14159

[node name="hit_button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1343.0
offset_top = 585.0
offset_right = 1488.0
offset_bottom = 629.0
theme_override_font_sizes/font_size = 26
text = "Pedir carta
"

[node name="stand_button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1355.0
offset_top = 673.0
offset_right = 1482.0
offset_bottom = 717.0
theme_override_font_sizes/font_size = 26
text = "Plantarse"

[node name="result_label" type="Label" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 1207.0
offset_top = 422.0
offset_right = 1428.0
offset_bottom = 491.0
theme_override_font_sizes/font_size = 26

[node name="restart_button" type="Button" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 90.0
offset_top = 771.0
offset_right = 207.0
offset_bottom = 815.0
theme_override_font_sizes/font_size = 26
text = "Reiniciar"

[node name="back_button" type="Button" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 115.0
offset_top = 689.0
offset_right = 176.0
offset_bottom = 732.0
theme_override_font_sizes/font_size = 25
text = "Salir"

[node name="turn_label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 17.0
offset_top = 212.0
offset_right = 219.0
offset_bottom = 288.0
theme_override_font_sizes/font_size = 25

[node name="Fondomesa" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(807, 445)
scale = Vector2(1.04688, 0.865234)
texture = ExtResource("2_ldim1")
